--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,45 @@
-
+body {
+    display: flex;
+    justify-content: center;
+    font-size: 1.2em;
+    font-family: Sans-serif;
+}
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    max-height: 95%;
+    min-height: 95%;
+    max-width: 80%;
+    min-width: 80%;
+}
+.right {
+    align-self: flex-end;
+}
+.bold {
+    font-weight: bold;
+}
+.imgWrap {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    flex-wrap: wrap;
+}
+.footie {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    border-top: 1px solid #AAAAAA;
+    font-size: .6em;
+    line-height: 2em;
+}
+li {
+    list-style-type: none;
+}
+a {
+    min-width: 25%;
+    font-family: Sans-serif;
+    font-size: .6em;
+    line-height: 2em;
+    text-decoration: none;
+}
