--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,18 @@
 body {
     display: flex;
-    justify-content: center;
-    font-size: 1.2em;
+    justify-content: space-between;
+    font-size: 1.3em;
     font-family: Sans-serif;
+    background: #fff;
 }
 .wrapper {
+    margin: auto;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    max-height: 95%;
-    min-height: 95%;
-    max-width: 80%;
-    min-width: 80%;
+    max-height: 90%;
+    min-height: 90%;
+    max-width: 70%;
+    min-width: 70%;
 }
 .right {
     align-self: flex-end;
@@ -22,6 +23,7 @@ body {
 .imgWrap {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     text-align: center;
     flex-wrap: wrap;
 }
@@ -32,9 +34,6 @@ body {
     border-top: 1px solid #AAAAAA;
     font-size: .6em;
     line-height: 2em;
-}
-li {
-    list-style-type: none;
 }
 a {
     min-width: 25%;
