--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
     text-align: center;
     flex-wrap: wrap;
 }
-.footie {
+.footer {
     display: flex;
     flex-direction: column;
     text-align: center;
